; ModuleID = '/home/carl/AnghaBench/qmk_firmware/drivers/haptic/extr_haptic.c_haptic_toggle.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/drivers/haptic/extr_haptic.c_haptic_toggle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64 }

@haptic_config = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @haptic_toggle() #0 {
  %1 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @haptic_config, i32 0, i32 1), align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = call i32 (...) @haptic_disable()
  br label %7

5:                                                ; preds = %0
  %6 = call i32 (...) @haptic_enable()
  br label %7

7:                                                ; preds = %5, %3
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @haptic_config, i32 0, i32 0), align 8
  %9 = call i32 @eeconfig_update_haptic(i32 %8)
  ret void
}

declare dso_local i32 @haptic_disable(...) #1

declare dso_local i32 @haptic_enable(...) #1

declare dso_local i32 @eeconfig_update_haptic(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
